Fixed stretched profile picture on profile page

--- a/app/client/stylesheets/components/pu-imagepreview.sass
+++ b/app/client/stylesheets/components/pu-imagepreview.sass
@@ -25,6 +25,9 @@
         &.pu-imagepreview-large
             height: 236px
 
+    &-profile
+        border-radius: 50%
+
     &-cover
         float: none
         width: 100%
