--- a/app/client/stylesheets/components/pu-upload.sass
+++ b/app/client/stylesheets/components/pu-upload.sass
@@ -1,20 +1,14 @@
 .pu-upload
     @extend %clearfix
-    
+
     .pu-paragraph
         margin-top: .5em
-
-    img 
-        border-radius: 50%
 
     .pu-button
         margin-top: 30px
 
     &-large
-        img 
-            border-radius: 0
-
-        .pu-button 
+        .pu-button
             float: left
             margin-right: 20px - 6px
             margin-top: 0
